Fixes bug in NewItemCard, where clickable caused it not to show up on mobile

--- a/app/components/Clickable.module.css
+++ b/app/components/Clickable.module.css
@@ -1,5 +1,5 @@
 .clickable {
-    display: flex;
+    display: block;
     box-shadow: -3px 4px 12px -1px rgba(0, 0, 0, 0.25);
 
     cursor: pointer;
